[package]
name = "tower-security"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]
session-backend-memory = []

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.6.20", optional = true }
http = "0.2.11"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync"] }
tower-cookies = "0.9.0"
tower-layer = "0.3.2"
tower-service = "0.3.2"
uuid = { version = "1.5.0", features = ["v4"] }

[workspace]
members = ["examples/*"]
