[package]
name = "tower-auth-example-axum"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-security = { path = "../../", features = [
    "axum",
    "session-storage-memory",
] }
